samples/_failures_safe/1761195139_5a418c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc59500a.c: In function ‘main’:
./samples/SAFE/__tmp_cc59500a.c:152:37: error: expected ‘)’ at end of input
  152 |     size_t len = strlen(input_buffer
      |                        ~            ^
      |                                     )
./samples/SAFE/__tmp_cc59500a.c:152:5: error: expected declaration or statement at end of input
  152 |     size_t len = strlen(input_buffer
      |     ^~~~~~
